# facedetect

./: README.md  package.xml  setup.cfg  setup.py
facedetect/: my_node.py
launch/: facedetect_launch.py
